--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
    <title>Home | Rosé Essentials</title>
-
    <meta charset="utf-8"> 
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,15 +19,13 @@
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-
    JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-  <!-----css link to html file-->
+  <!-----link style.css link to html file-->
   <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-
         <a class="navbar-brand" href="./RoseEssentialsWebSite.html"><img src="images/logo.jpg"></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> 
@@ -38,53 +35,31 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./RoseEssentialsWebSite.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./.html">Shop</a>
+              <a class="nav-link" href="#shop">Shop</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./.html">Cart</a>
+                <a class="nav-link" href="#cart">Cart</a>
             </li>
             <li>
-                <a class = "nav-link" href= "./.html">Account Page</a>
+                <a class = "nav-link" href= "#account">Account Page</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./RoseEssentialsAboutPage.html">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <p class = "p1"><strong>Rosé Essentials</strong></p>
-  
-  <div class = "content-container">
-    <div class = "desc-text">
-      <div class = "wel-head">
-        <h2>Welcome to Rosé Essentials</h2>
-      </div>
-      <div class = "wel-para">
-        <p>"Discover a curated selection of luxurious rose-themed products. 
-          From clothing to fragrances, we have everything you need to indulge 
-          in elegance. Our goal is to provide sustainable and luxurious products 
-          that satisfy our customers in every way possible. At Rosé Essentials, we 
-          believe that beauty and sophistication should be accessible to everyone. 
-          Our collection includes exquisite handbags, stylish accessories like pins 
-          and hairpins, elegant mugs, trendy shirts, and much more. Whether you're 
-          looking for a statement piece or a subtle touch of floral charm, we have 
-          something special just for you."</p>
-      </div>
-    </div>
-
-    <div class = "image-container">
-      <img src = "Images/Rose_Perfume.jpg" alt = "image 1">
-      <img src = "Images/Rose_Clip.jpg" alt = "image 2">
-      <img src = "Images/candles.jpg" alt = "image 3">
-    </div>
-  </div>
+    <div id="spa-container"></div>
 
     <footer>Copyright &copy 2025 Rosé Essentials</footer>
+
+  <!----link spa.js file in html-->
+  <script src = "spa.js"></script>
 
 </body>
 </html>
